# i2cdevice-python

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  dist.sh  pyproject.toml  setup.py  suggestion.md
examples/: ltr559.py
i2cdevice/: __init__.py  adapter.py
tests/: test_adapters.py  test_defaultbus.py  test_device.py  test_registerproxy.py  test_set_and_get.py  test_utils.py
